Changed theme to coffee

--- a/react-site/SoDaBearJess/index.html
+++ b/react-site/SoDaBearJess/index.html
@@ -33,7 +33,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sodabearjess</title>
   </head>
-  <body class="theme-blue-green">
+  <body class="theme-coffee">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
